[gd_scene load_steps=5 format=3 uid="uid://cuxuarsrmh4iq"]

[ext_resource type="Script" uid="uid://d0mr7a1hvdaqr" path="res://scripts/restart.gd" id="1_7dg1w"]
[ext_resource type="Texture2D" uid="uid://dy8f53hvrprdt" path="res://assets/sprites/restart-icon.png" id="1_mi6dp"]
[ext_resource type="PackedScene" uid="uid://cn1xveyq1qhw3" path="res://scenes/clickable.tscn" id="3_lyatw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q5shd"]
radius = 24.0

[node name="Restart" type="Node2D"]
script = ExtResource("1_7dg1w")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(4.5, 4.5)
texture = ExtResource("1_mi6dp")

[node name="Clickable" parent="." instance=ExtResource("3_lyatw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable"]
shape = SubResource("CircleShape2D_q5shd")

[connection signal="clicked" from="Clickable" to="." method="_on_click"]
[connection signal="mouse_entered" from="Clickable" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Clickable" to="." method="_on_mouse_exited"]
